Basic presentation of gurka file content

--- a/source/VizGurka/Pages/Index.cshtml
+++ b/source/VizGurka/Pages/Index.cshtml
@@ -1,10 +1,28 @@
 ﻿@page
+@using SpecGurka.GurkaSpec
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    var gurkaFilepath = @"";
+    var TestRun = Gurka.ReadGurkaFile(gurkaFilepath);
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<h1>Tests which have been execucted</h1>
+
+<ul>
+@foreach(var product in TestRun.Products)
+{
+    <li>@product.Name</li>
+    <ul>
+    @foreach (var feature in product.Features)
+    {
+        <li>@feature.Name</li>
+        <ul>
+        @foreach (var scenario in feature.Scenarios)
+        {
+            <li>@scenario.Name</li>
+        }
+        </ul>
+    }
+    </ul>
+}
+</ul>
