--- a/source/VizGurka/wwwroot/css/vizgurka.css
+++ b/source/VizGurka/wwwroot/css/vizgurka.css
@@ -1,22 +1,57 @@
-html {
-  font-size: 14px;
+* {
+  margin: 0;
 }
 
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+input, button, textarea, select {
+  font: inherit;
+}
+
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
+}
+
+p {
+  text-wrap: pretty;
+}
+h1, h2, h3, h4, h5, h6 {
+  text-wrap: balance;
+}
+
+img, picture, video, canvas, svg {
+  display: block;
+  max-width: 100%;
+}
+
+main {
+  background-color: #F2F2F2;
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
-html {
-  position: relative;
-  min-height: 100%;
+body {
+  display: grid;
+  grid-template-columns: 4% 96%;
 }
 
-body {
-  margin-bottom: 60px;
+.navigation {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  padding:0.5rem;
+  border-right: solid 1px #CEC2C2;
 }
+
+.navigation hr {
+  border: none;
+  height: 1px;
+  width: 100%;
+  background-color: #CEC2C2;
+}
+
