chore: added a font.
Read about this font here:
https://www.brailleinstitute.org/freefont/

This font is free to use and helps people with reading problems read text better with this font.

Refs: #7

--- a/source/VizGurka/wwwroot/css/vizgurka.css
+++ b/source/VizGurka/wwwroot/css/vizgurka.css
@@ -1,3 +1,32 @@
+@font-face {
+  font-family: "atkinson";
+  font-weight: 700;
+  src: url("../fonts/Atkinson-Hyperlegible-Bold.woff2") format("woff2"), url("../fonts/Atkinson-Hyperlegible-Bold.woff") format("woff");
+}
+@font-face {
+  font-family: "atkinson";
+  font-style: italic;
+  font-weight: 700;
+  src: url("../fonts/Atkinson-Hyperlegible-BoldItalic.woff2") format("woff2"), url("../fonts/Atkinson-Hyperlegible-BoldItalic.woff") format("woff");
+}
+@font-face {
+  font-family: "atkinson";
+  font-style: italic;
+  font-weight: 400;
+  src: url("../fonts/Atkinson-Hyperlegible-Italic.woff2") format("woff2"), url("../fonts/Atkinson-Hyperlegible-Italic.woff") format("woff");
+}
+@font-face {
+  font-family: "atkinson";
+  font-weight: 400;
+  src: url("../fonts/Atkinson-Hyperlegible-Regular.woff2") format("woff2"), url("../fonts/Atkinson-Hyperlegible-Regular.woff") format("woff");
+}
+
+body {
+  font-family: "atkinson", sans-serif;
+  display: grid;
+  grid-template-columns: 50px auto;
+}
+
 * {
   margin: 0;
 }
@@ -32,11 +61,6 @@ main {
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
-
-body {
-  display: grid;
-  grid-template-columns: 4% 96%;
 }
 
 .navigation {
