--- a/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml
+++ b/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml
@@ -1,10 +1,24 @@
 @{
   Layout = "~/Pages/Shared/_Layout.cshtml";
+
+  string filePath = System.IO.Path.Combine(System.AppDomain.CurrentDomain.BaseDirectory, "GurkaFiles/DemoProject_2024-11-28T13_21_37.gurka");
+
+  var file = Gurka.ReadGurkaFile(filePath).Products.FirstOrDefault();
 }
 
 <div class="wrapper">
   <aside class="sidebar" id="sidebar">
-
+    <ul class="feature-list">
+      @foreach (var feature in file.Features)
+      {
+        <li>
+          <a href="@Url.Page("/Features/Index", new { id = feature.Id })">
+            <img src="~/icons/@(feature.TestsPassed ? "check" : "cross").svg" alt="icon to represent the test result"/>
+            <p>@feature.Name</p>
+          </a>
+        </li>
+      }
+    </ul>
   </aside>
   <div class="resizer" id="resizer"></div>
   <div class="main">
