--- a/source/VizGurka/Pages/Index.cshtml
+++ b/source/VizGurka/Pages/Index.cshtml
@@ -2,50 +2,6 @@
 @model IndexModel
 @{
   Layout = "~/Pages/Shared/_FeaturesLayout.cshtml";
-  //assuming one product per gurka file/project, this will be just for now, when i have one feature
-  //with one scenario
-  var feature = Model.TestRun.Products.FirstOrDefault().Features.FirstOrDefault();
 }
 
-<header class="test-header">
-  <div>
-    <img src="~/icons/@(feature.TestsPassed ? "check" : "cross").svg" alt="icon to represent the test result"/>
-    <h1>@feature.Name</h1>
-  </div>
-  <p class="test-result-message">@(feature.TestsPassed ? "The test passed" : "The test did not pass")</p>
-</header>
-
-<div class="tab-container">
-  <!-- Tabs -->
-  <input type="radio" id="tab-scenarios" name="tab" checked>
-  <label for="tab-scenarios">Scenarios</label>
-
-  <input type="radio" id="tab-background" name="tab">
-  <label for="tab-background">Background</label>
-
-  <!-- Tab Content -->
-  <section class="tab-content">
-    <div id="scenarios">
-      <div class="scenario-container">
-        @foreach (var scenario in feature.Scenarios)
-        {
-          <div class="scenario">
-            <h2>@scenario.Name</h2>
-            <hr/>
-            <ul>
-              @foreach (var step in scenario.Steps)
-              {
-                <li>@step.Text</li>
-              }
-            </ul>
-          </div>
-        }
-      </div>
-    </div>
-
-    <div id="background">
-      <p>Background for the feature, this is not currently available</p>
-    </div>
-  </section>
-</div>
-
+<h1>Welcome!</h1>
