--- a/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml.css
+++ b/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml.css
@@ -1,12 +1,13 @@
 .sidebar{
   background-color: #FFFFFF;
   min-height: 100vh;
-  width: 250px;
   min-width: 0;
   max-width: 600px;
   overflow: hidden;
   white-space: nowrap;
   padding: 10px;
+  max-height: 100vh;
+  overflow-y: auto;
 }
 
 .resizer{
@@ -20,4 +21,11 @@
 
 .main{
   flex: 1;
+}
+
+search{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+  max-width: 250px;
 }
