--- a/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml.css
+++ b/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml.css
@@ -29,3 +29,18 @@ search{
   margin-bottom: 1rem;
   max-width: 250px;
 }
+
+.arrow {
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+}
+
+.right {
+  transform: rotate(-45deg);
+}
+
+.down {
+  transform: rotate(45deg);
+}
