chore: small description on index page.
Refs: #7

--- a/source/VizGurka/Pages/Index.cshtml
+++ b/source/VizGurka/Pages/Index.cshtml
@@ -4,4 +4,14 @@
   Layout = "~/Pages/Shared/_FeaturesLayout.cshtml";
 }
 
-<h1>Welcome!</h1>
+<section class="intro">
+  <div>
+    <h1>Welcome to VizGurka!</h1>
+    <hr>
+    <p>
+      VizGurka is a web application designed to visualize and manage feature specifications and test results.
+      It provides a user-friendly interface to navigate through various
+      features, scenarios, and rules, displaying their descriptions, steps, and test outcomes.
+    </p>
+  </div>
+</section>
