chore: small refactorings.
Refs: #7

--- a/source/VizGurka/wwwroot/css/vizgurka.css
+++ b/source/VizGurka/wwwroot/css/vizgurka.css
@@ -1,28 +1,28 @@
 @font-face {
-  font-family: "atkinson";
+  font-family:'atkinson';
   font-weight: 700;
-  src: url("../fonts/Atkinson-Hyperlegible-Bold.woff2") format("woff2"), url("../fonts/Atkinson-Hyperlegible-Bold.woff") format("woff");
+  src:url("../fonts/Atkinson-Hyperlegible-Bold.woff2")format("woff2"),url("../fonts/Atkinson-Hyperlegible-Bold.woff")format("woff");
 }
 @font-face {
-  font-family: "atkinson";
+  font-family:'atkinson';
   font-style: italic;
   font-weight: 700;
-  src: url("../fonts/Atkinson-Hyperlegible-BoldItalic.woff2") format("woff2"), url("../fonts/Atkinson-Hyperlegible-BoldItalic.woff") format("woff");
+  src:url("../fonts/Atkinson-Hyperlegible-BoldItalic.woff2")format("woff2"),url("../fonts/Atkinson-Hyperlegible-BoldItalic.woff")format("woff");
 }
 @font-face {
-  font-family: "atkinson";
+  font-family:'atkinson';
   font-style: italic;
   font-weight: 400;
-  src: url("../fonts/Atkinson-Hyperlegible-Italic.woff2") format("woff2"), url("../fonts/Atkinson-Hyperlegible-Italic.woff") format("woff");
+  src:url("../fonts/Atkinson-Hyperlegible-Italic.woff2")format("woff2"),url("../fonts/Atkinson-Hyperlegible-Italic.woff")format("woff");
 }
 @font-face {
-  font-family: "atkinson";
+  font-family:'atkinson';
   font-weight: 400;
-  src: url("../fonts/Atkinson-Hyperlegible-Regular.woff2") format("woff2"), url("../fonts/Atkinson-Hyperlegible-Regular.woff") format("woff");
+  src:url("../fonts/Atkinson-Hyperlegible-Regular.woff2")format("woff2"),url("../fonts/Atkinson-Hyperlegible-Regular.woff")format("woff");
 }
 
 body {
-  font-family: "atkinson", sans-serif;
+  font-family:'atkinson', sans-serif;
   display: grid;
   grid-template-columns: 50px auto;
 }
