--- a/source/VizGurka/Pages/Features/Index.cshtml.css
+++ b/source/VizGurka/Pages/Features/Index.cshtml.css
@@ -14,6 +14,22 @@ header > div {
 
 .test-result-message{
   color: #696161;
+  display: flex;
+  align-items: end;
+  gap: 2px;
+}
+
+.scenario .test-result-message{
+  padding-bottom: 2px;
+}
+
+.test-result-message > img{
+  margin-bottom: 2px;
+}
+
+.scenario-overview{
+  display: flex;
+  justify-content: space-between;
 }
 
 .scenario > ul {
@@ -24,7 +40,7 @@ header > div {
 .scenario > hr {
   border: none;
   height: 1px;
-  width: 70%;
+  width: 100%;
   background-color: #CEC2C2;
 }
 
